@@ -12,7 +12,7 @@
 
 #ifdef HAVE_IAP
 
-#ifdef __CONF_COMPILE_IAP
+#ifdef COMPILE_IAP
 
 /*****************************************************************************/
 /** 
